2010-04-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/BaseVisitor.h: Allowing to visit const objects.
	* include/dlvhex/PrintVisitor.h: Likewise.
	* include/dlvhex/Literal.h: Likewise.
	* include/dlvhex/AtomSet.h: Likewise.
	* include/dlvhex/Atom.h: Likewise.
	* include/dlvhex/ExternalAtom.h: Likewise.
	* include/dlvhex/AggregateAtom.h: Likewise.
	* include/dlvhex/Program.h: Likewise.
	* include/dlvhex/Rule.h: Likewise.
	* include/dlvhex/Repository.h: Likewise.
	* src/dlvhex/PrintVisitor.cpp: Likewise.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/ExternalAtom.cpp: Likewise.
	* src/dlvhex/Rule.cpp: Likewise.
	* src/dlvhex/Program.cpp: Likewise.
	* src/dlvhex/AggregateAtom.cpp: Likewise.
	* src/dlvhex/Literal.cpp: Likewise.
	* src/dlvhex/AtomSet.cpp: Likewise.

2010-03-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Parser fix for NAF.
	* examples/Makefile.am: Added testcase for NAF parsing.
	* examples/naftest.hex: Likewise.
	* examples/tests/naftest.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.

2010-03-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/DLVresultParserDriver.cpp (appendFactFromPropFact):
	Remove NoPredicate assertion.

2010-02-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Parser fix for operator <>.
	* examples/operators.hex: Testcase for operators <> and !=.
	* examples/Makefile.am: Likewise.
	* examples/tests/operators.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.

2010-01-11  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Fix for boost header version check (updated to
	newest version of boost.m4 from http://github.com/tsuna/boost.m4).

2010-01-06  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/Makefile.am: Installing one more header.
	* dlvhex/trunk/dlvhex.pc.in: Added bindir to packageconfig file.

2009-12-18  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/Makefile.am: Installing more headers.